--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.tablemi.flutter_sunmi_printer">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.tablemi.flutter_sunmi_printer">
+  <queries>
+    <package android:name="woyou.aidlservice.jiuiv5" />
+  </queries>
 </manifest>
